[gd_scene load_steps=11 format=3 uid="uid://dysvni5hhiaf5"]

[ext_resource type="FontFile" uid="uid://d1aiglk34mpdk" path="res://Assets/neuropol x rg.otf" id="1_15ak5"]
[ext_resource type="AudioStream" uid="uid://dq6cj2cpcj3xt" path="res://Assets/Sounds/bleep.wav" id="2_ds2ab"]
[ext_resource type="AudioStream" uid="uid://ckl6esral8j8h" path="res://Assets/Sounds/button_select.wav" id="3_x2n4c"]
[ext_resource type="AudioStream" uid="uid://c0mdvah6r007f" path="res://Assets/Sounds/drop.wav" id="4_elx6r"]
[ext_resource type="Script" path="res://Nodes/VolumeSlider.gd" id="5_s0iqj"]

[sub_resource type="GDScript" id="GDScript_17y4k"]
script/source = "extends Control

@onready var name_label := $PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Name
@onready var begin_button := $PanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/Begin

@export var in_game := false

var shown_this_tick = false

# Called when the node enters the scene tree for the first time.
func _ready():
	on_open()
	if in_game:
		begin_button.text = \"Back\"
	else:
		begin_button.text = \"Begin\"

	if WinState.won:
		name_label.text = \"Dragon\"
		name_label.add_theme_color_override(\"font_color\", Color(\"af0000\"))
		begin_button.disabled = true
		
func _process(delta):
	if Input.is_action_just_pressed(\"escape\") and not shown_this_tick:
		_on_begin_pressed()
	shown_this_tick = false
	
func on_open():
	shown_this_tick = true
	begin_button.grab_focus()

func _on_begin_pressed():
	if in_game:
		self.hide()
		get_tree().paused = false
	else:
		Fader.fade()
		await Fader.done_fading
		get_tree().change_scene_to_file(\"res://Scenes/Intro.tscn\")
		Fader.unfade()

func _on_exit_pressed():
	get_tree().root.propagate_notification(NOTIFICATION_WM_CLOSE_REQUEST)
	get_tree().quit()


func _on_volume_drag_ended(value_changed):
	pass # Replace with function body.
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tuiu0"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d3vag"]
random_pitch = 1.2
streams_count = 3
stream_0/stream = ExtResource("2_ds2ab")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_x2n4c")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_elx6r")
stream_2/weight = 1.0

[sub_resource type="GDScript" id="GDScript_qw7m8"]
script/source = "extends HSlider

@onready var label := $\"../DifficultyLabel\"

# Called when the node enters the scene tree for the first time.
func _ready():
	update()

func update():
	Config.difficulty_modifier = value
	match Config.difficulty_modifier:
		0.5:
			label.text = \"Sedate\"
		0.75:
			label.text = \"Slower\"
		1.0:
			label.text = \"Normal\"
		1.25:
			label.text = \"Faster\"
		1.5: 
			label.text = \"Speedy\"


func _on_value_changed(value):
	update()
"

[sub_resource type="GDScript" id="GDScript_065k0"]
script/source = "extends CheckButton


# Called when the node enters the scene tree for the first time.
func _ready():
	button_pressed = Config.mouse_driven


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_toggled(toggled_on):
	Config.mouse_driven = toggled_on
"

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_17y4k")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_15ak5")
theme_override_font_sizes/font_size = 50
text = "The Princess"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_15ak5")
theme_override_font_sizes/font_size = 40
text = "and the"

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_15ak5")
theme_override_font_sizes/font_size = 40
text = "..."

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_tuiu0")

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="TestSound" type="AudioStreamPlayer" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer"]
stream = SubResource("AudioStreamRandomizer_d3vag")

[node name="Volume" type="HSlider" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../VBoxContainer/Exit")
focus_neighbor_bottom = NodePath("../../../MarginContainer2/VBoxContainer/HBoxContainer/Difficulty")
focus_next = NodePath("../../../MarginContainer2/VBoxContainer/HBoxContainer/Difficulty")
focus_previous = NodePath("../../../VBoxContainer/Exit")
max_value = 1.0
step = 0.05
script = ExtResource("5_s0iqj")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Difficulty:"

[node name="Difficulty" type="HSlider" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../MarginContainer/HBoxContainer/Volume")
focus_neighbor_bottom = NodePath("../../KBMouse")
focus_next = NodePath("../../KBMouse")
focus_previous = NodePath("../../../../MarginContainer/HBoxContainer/Volume")
min_value = 0.5
max_value = 1.5
step = 0.25
value = 1.0
script = SubResource("GDScript_qw7m8")

[node name="DifficultyLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Normal"
horizontal_alignment = 2

[node name="KBMouse" type="CheckButton" parent="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HBoxContainer/Difficulty")
focus_neighbor_bottom = NodePath("../../../VBoxContainer/Begin")
focus_next = NodePath("../../../VBoxContainer/Begin")
focus_previous = NodePath("../HBoxContainer/Difficulty")
text = "Controls: Tank / Mouse"
script = SubResource("GDScript_065k0")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Begin" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MarginContainer2/VBoxContainer/KBMouse")
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../../MarginContainer2/VBoxContainer/KBMouse")
theme_override_fonts/font = ExtResource("1_15ak5")
theme_override_font_sizes/font_size = 30
text = "Begin"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Begin")
focus_neighbor_bottom = NodePath("../../MarginContainer/HBoxContainer/Volume")
focus_next = NodePath("../../MarginContainer/HBoxContainer/Volume")
focus_previous = NodePath("../Begin")
theme_override_fonts/font = ExtResource("1_15ak5")
theme_override_font_sizes/font_size = 30
text = "Exit
"

[connection signal="drag_ended" from="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer/Volume" to="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer/Volume" method="_on_drag_ended"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer/Volume" to="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer/Volume" method="_on_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer/HBoxContainer/Difficulty" to="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer/HBoxContainer/Difficulty" method="_on_value_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer/KBMouse" to="PanelContainer/VBoxContainer/PanelContainer3/MarginContainer2/VBoxContainer/KBMouse" method="_on_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/Begin" to="." method="_on_begin_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
